# exposed-sandbox

./: .gitignore  .gitmodules  README.rst
docs/: index.html
docs/note-app/: asset-manifest.json  index.html
docs/note-app/static/js/: 2.419086b5.chunk.js  2.419086b5.chunk.js.map  2.52c80633.chunk.js  2.52c80633.chunk.js.map  2.8704f192.chunk.js  2.8704f192.chunk.js.map  main.3d3ba699.chunk.js  main.3d3ba699.chunk.js.map  main.9c193165.chunk.js  main.9c193165.chunk.js.map  main.bcdd48fc.chunk.js  main.bcdd48fc.chunk.js.map  main.f66a48cc.chunk.js  main.f66a48cc.chunk.js.map  main.f906d2ff.chunk.js  main.f906d2ff.chunk.js.map  runtime-main.25275333.js  runtime-main.25275333.js.map
src/kubernetes/ddclient/: Dockerfile  cronjob.yml
src/note-app/: .eslintcache  docker-compose.yml  package.json
src/note-app/.devcontainer/: devcontainer.json
src/note-app/public/: index.html
src/note-app/src/: App.tsx
src/note-app/src/app/: store.ts
src/note-app/src/components/: NativeText.tsx
src/note-app/src/repositories/: SpreadsheetRepository.ts
src/notes/: sre-book-slo.rst
src/opencv-shadow-removal/: .gitignore  README.rst  pyproject.toml
src/opencv-shadow-removal/.devcontainer/: Dockerfile  devcontainer.json
src/skeletons/: cliapp.py  docker-compose.v2.yml
src/slack-suppressor/: .dockerignore  Dockerfile  README.rst  constraints.txt  deployment.yml  main.py  requirements.txt  token_app.py
src/sts-tts/: .gitignore  example.credentials.json  pyproject.toml
src/utility-container/ponger/: Dockerfile  Makefile  default.conf.template
(+4 files in other folders)
