[tool.poetry]
name = "shadow-removal"
version = "0.1.0"
description = "An experimental a notebook and a script remove shadow from a picture"
authors = ["YABATANIEN, Murichaduke <namidame.xiao.xing.mell.1.0.1x@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytesseract = "^0.3.7"
opencv-python = "^4.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.0.7"
ipykernel = "^5.4.3"
matplotlib = "^3.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
