[tool.poetry]
name = "sts-tts"
version = "0.1.0"
description = ""
authors = ["YABATANIEN, Murichaduke <mail@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
jupyterlab = "^3.0.10"
google-cloud-speech = "^2.1.0"
python-dotenv = "^0.15.0"
pandas = "^1.2.3"
librosa = "^0.8.0"
matplotlib = "^3.3.4"
SoundFile = "^0.10.3"
audioread = "^2.1.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
